@@ -1,5 +1,5 @@
 
-R version 2.10.0 Under development (unstable) (2009-05-28 r48676)
+R version 2.10.0 Under development (unstable) (2009-06-02 r48703)
 Copyright (C) 2009 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -6445,4 +6445,16 @@ Error in `$<-.data.frame`(`*tmp*`, "NewCol", value = integer(0)) :
 Error in `[[<-.data.frame`(`*tmp*`, "NewCol", value = integer(0)) : 
   replacement has 0 rows, data has 3
 > ## succeeded but gave corrupt result in 2.9.0
+> 
+> ## Printing NA_complex_
+> m22 <- matrix(list(NA_complex_, 3, "A string", NA_complex_), 2,2)
+> print(m22)
+     [,1] [,2]      
+[1,] NA   "A string"
+[2,] 3    NA        
+> print(m22, na.print="<missing value>")
+     [,1]            [,2]           
+[1,] <missing value> "A string"     
+[2,] 3               <missing value>
+> ## used uninitialized variable in C, noticably Windows, for R <= 2.9.0
 > 
